make-a-wish-salesforce/src/objects/Contact_Constituent_Code__c.object
<CustomObject>
    <fields>
        <fullName>Affiliation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Affiliation</label>
        <referenceTo>npe5__Affiliation__c</referenceTo>
        <relationshipLabel>Contact Constituent Codes</relationshipLabel>
        <relationshipName>Contact_Constituent_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constituent_Code__c</fullName>
        <label>Constituent Code</label>
        <referenceTo>Constituent_Code__c</referenceTo>
        <relationshipLabel>Contact Constituent Codes</relationshipLabel>
        <relationshipName>Contact_Constituent_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hidden_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Constituent Codes</relationshipLabel>
        <relationshipName>Contact_Constituent_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Constituent Code</label>
    <nameField>
        <displayFormat>CCC-{00000}</displayFormat>
        <label>Contact Constituent Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Constituent Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>